# confirming_poc

./: .pre-commit-config.yaml  README.md  main.tf  providers.tf  variables.tf
api_architecture/: .pre-commit-config.yaml  Makefile  main.py  pyproject.toml
api_architecture/db/: dynamodb.py
api_architecture/schemas/: operation.py
api_architecture/tests/: conftest.py
api_architecture/tests/integration/: test_operationcreateapi.py
confirming_api/: .gitignore  Makefile  main.py  pyproject.toml
modules/dynamodb/: main.tf  output.tf  variables.tf
modules/lambda/: .terraform.lock.hcl  main.tf  outputs.tf  policy.json  variables.tf
