[tool.poetry]
name = "confirming-api"
version = "0.1.0"
description = "Confirming API Rest"
authors = ["Klimb <klimb@klimb.pe>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
mangum = "^0.17.0"
uvicorn = "^0.27.0"
boto3 = "^1.34.26"
pydantic = "^2.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
